--- a/project_template.html
+++ b/project_template.html
@@ -39,15 +39,69 @@
         }
     </script>
     <style>
+        :root {
+            --bg: #0f172a;
+            --text: #f8fafc;
+            --panel: rgba(30, 41, 59, 0.95);
+            --border: rgba(255, 255, 255, 0.1);
+            --nav: rgba(15, 23, 42, 0.95);
+        }
+
         body {
-            background-color: #0f172a;
-            color: #f8fafc;
+            background-color: var(--bg);
+            color: var(--text);
         }
 
         .glass-panel {
-            background: rgba(30, 41, 59, 0.95);
+            background: var(--panel);
             backdrop-filter: blur(10px);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid var(--border);
+        }
+
+        .nav-surface {
+            background-color: var(--nav);
+            border-color: var(--border);
+            color: var(--text);
+        }
+
+        body.theme-light {
+            --bg: #f8fafc;
+            --text: #0f172a;
+            --panel: rgba(255, 255, 255, 0.9);
+            --border: rgba(15, 23, 42, 0.08);
+            --nav: rgba(255, 255, 255, 0.95);
+        }
+
+        .lang-switch {
+            background: var(--panel);
+            border-color: var(--border);
+        }
+
+        .lang-btn {
+            background: var(--panel);
+            border: 1px solid var(--border);
+        }
+
+        .theme-btn {
+            color: var(--text);
+        }
+
+        body.theme-light .lang-switch {
+            background: #e2e8f0;
+            border-color: #cbd5e1;
+        }
+
+        body.theme-light .lang-btn {
+            background: #e2e8f0;
+            border-color: #cbd5e1;
+        }
+
+        body.theme-light .theme-btn {
+            color: #0f172a;
+        }
+
+        body.theme-light .text-white {
+            color: #0f172a !important;
         }
     </style>
 </head>
@@ -55,15 +109,26 @@
 <body class="antialiased">
 
     <!-- Compact Navigation -->
-    <nav class="fixed top-0 left-0 right-0 w-full z-50 glass-panel h-16 flex items-center bg-slate-900/95 backdrop-blur-md border-b border-slate-800">
+    <nav class="fixed top-0 left-0 right-0 w-full z-50 glass-panel nav-surface h-16 flex items-center backdrop-blur-md border-b border-slate-800">
         <div class="max-w-7xl mx-auto px-4 w-full flex justify-between">
             <a href="index.html#projects" class="flex items-center gap-2 text-slate-300 hover:text-white transition-colors">
                 <i class="fa-solid fa-arrow-left"></i>
                 <span class="font-bold font-mono">Volver al Portafolio</span>
             </a>
-            <span class="text-brand-500 font-mono text-sm hidden md:block">
-                pcdcn/projects/detail
-            </span>
+            <div class="lang-switch flex items-center gap-2 text-sm px-2 py-1 rounded-full border shadow-sm">
+                <button id="btn-es" class="lang-btn flex items-center px-2 py-1 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
+                    <img src="https://flagcdn.com/w40/es.png" alt="Español" title="Español"
+                        class="w-6 h-6 rounded-full">
+                </button>
+                <button id="btn-en" class="lang-btn flex items-center px-2 py-1 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
+                    <img src="https://flagcdn.com/w40/gb.png" alt="English" title="English"
+                        class="w-6 h-6 rounded-full">
+                </button>
+                <button id="theme-toggle"
+                    class="lang-btn theme-btn flex items-center justify-center w-9 h-9 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
+                    <i class="fa-solid fa-moon"></i>
+                </button>
+            </div>
         </div>
     </nav>
 
