--- a/project_template.html
+++ b/project_template.html
@@ -26,8 +26,11 @@
                     },
                     colors: {
                         brand: {
-                            500: '#0ea5e9',
-                            600: '#0284c7',
+                            50: '#e0f8f9',
+                            100: '#b8eff1',
+                            500: '#00bfc4',
+                            600: '#009aa3',
+                            900: '#006f75',
                         },
                         dark: {
                             bg: '#0f172a',
@@ -45,6 +48,11 @@
             --panel: rgba(30, 41, 59, 0.95);
             --border: rgba(255, 255, 255, 0.1);
             --nav: rgba(15, 23, 42, 0.95);
+            /* Brand palette (dark mode) */
+            --color-primary: #00bfc4;
+            --color-secondary: #f8766d;
+            --color-primary-strong: #00bfc4;
+            --color-secondary-strong: #f8766d;
         }
 
         body {
@@ -65,11 +73,16 @@
         }
 
         body.theme-light {
-            --bg: #f8fafc;
+            --bg: #ffffff;
             --text: #0f172a;
             --panel: rgba(255, 255, 255, 0.9);
             --border: rgba(15, 23, 42, 0.08);
             --nav: rgba(255, 255, 255, 0.95);
+            /* Light mode: swap order (coral then cyan) */
+            --color-primary: #f8766d;
+            --color-secondary: #00bfc4;
+            --color-primary-strong: #f8766d;
+            --color-secondary-strong: #00bfc4;
         }
 
         .lang-switch {
@@ -102,6 +115,80 @@
 
         body.theme-light .text-white {
             color: #0f172a !important;
+        }
+
+        /* Darker teal/coral accents in light mode */
+        body.theme-light .text-brand-500 {
+            color: #00949a !important;
+        }
+
+        body.theme-light .bg-brand-600 {
+            background-color: #00949a !important;
+        }
+
+        body.theme-light .border-brand-600 {
+            border-color: #00949a !important;
+        }
+
+        /* Brand text helpers */
+        .text-brand-500 {
+            color: var(--color-primary) !important;
+        }
+
+        .text-brand-secondary {
+            color: var(--color-secondary) !important;
+            font-weight: 700;
+        }
+
+        /* Tag pills */
+        .tag-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.35rem;
+            padding: 0.25rem 0.6rem;
+            border-radius: 9999px;
+            font-size: 0.75rem;
+            font-family: 'JetBrains Mono', monospace;
+            background: var(--color-secondary);
+            color: #ffffff;
+        }
+
+        body.theme-light .tag-badge {
+            background: var(--color-secondary-strong);
+            color: #ffffff;
+        }
+
+        /* Reusable Project Button (solid secondary) */
+        .btn-project {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0.5rem 1rem;
+            border-radius: 9999px;
+            font-weight: 600;
+            font-size: 0.75rem;
+            line-height: 1rem;
+            transition: all 0.3s ease;
+            border: 1px solid var(--color-secondary);
+            color: #ffffff;
+            background: var(--color-secondary);
+            box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+        }
+
+        .btn-project:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        }
+
+        .btn-project:focus-visible {
+            outline: 2px solid var(--color-secondary);
+            outline-offset: 2px;
+        }
+
+        body.theme-light .btn-project {
+            background: var(--color-secondary-strong);
+            border-color: var(--color-secondary-strong);
+            color: #ffffff;
         }
     </style>
 </head>
@@ -136,15 +223,15 @@
     <main class="pt-20 pb-12 min-h-screen px-4">
         <div class="max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 gap-10 items-start">
             <div class="space-y-6">
-                <div class="text-sm font-mono text-brand-500">project_detail.md</div>
+                <div class="text-sm font-mono text-brand-secondary">project_detail.md</div>
                 <h1 class="text-3xl md:text-4xl font-bold text-white" id="project-title">Título del Análisis</h1>
                 <p class="text-slate-300 text-lg leading-relaxed" id="project-desc">
                     Descripción corta del contexto del proyecto. Aquí explicamos brevemente qué metodologías se usaron
                     antes de mostrar el reporte completo.
                 </p>
                 <div class="flex flex-wrap gap-2" id="project-tags">
-                    <span class="text-xs font-mono bg-slate-800 px-3 py-1.5 rounded text-blue-400">R Stats</span>
-                    <span class="text-xs font-mono bg-slate-800 px-3 py-1.5 rounded text-purple-400">Shiny</span>
+                    <span class="tag-badge">R Stats</span>
+                    <span class="tag-badge">Shiny</span>
                 </div>
                 <div class="flex flex-wrap gap-3">
                     <a id="project-repo" href="#" target="_blank"
@@ -192,9 +279,9 @@
         if (tags) {
             const tagContainer = document.getElementById('project-tags');
             tagContainer.innerHTML = '';
-            tags.split(',').map(t => t.trim()).filter(Boolean).forEach(t => {
+                tags.split(',').map(t => t.trim()).filter(Boolean).forEach(t => {
                 const span = document.createElement('span');
-                span.className = 'text-xs font-mono bg-slate-800 px-3 py-1.5 rounded text-blue-300';
+                span.className = 'tag-badge';
                 span.textContent = t;
                 tagContainer.appendChild(span);
             });
