--- a/projects/anuario-movilidad.html
+++ b/projects/anuario-movilidad.html
@@ -27,11 +27,11 @@
                     },
                     colors: {
                         brand: {
-                            50: '#f0f9ff',
-                            100: '#e0f2fe',
-                            500: '#0ea5e9',
-                            600: '#0284c7',
-                            900: '#0c4a6e',
+                            50: '#e0f8f9',
+                            100: '#b8eff1',
+                            500: '#00bfc4',
+                            600: '#009aa3',
+                            900: '#006f75',
                         },
                         dark: {
                             bg: '#0f172a',
@@ -50,6 +50,11 @@
             --panel: rgba(30, 41, 59, 0.9);
             --border: rgba(255, 255, 255, 0.08);
             --nav: rgba(15, 23, 42, 0.95);
+            /* Brand palette (dark mode) */
+            --color-primary: #00bfc4;
+            --color-secondary: #f8766d;
+            --color-primary-strong: #00bfc4;
+            --color-secondary-strong: #f8766d;
         }
 
         body {
@@ -70,11 +75,16 @@
         }
 
         body.theme-light {
-            --bg: #f8fafc;
+            --bg: #ffffff;
             --text: #0f172a;
             --panel: rgba(255, 255, 255, 0.9);
             --border: rgba(15, 23, 42, 0.08);
             --nav: rgba(255, 255, 255, 0.95);
+            /* Light mode: swap order (coral then cyan) */
+            --color-primary: #f8766d;
+            --color-secondary: #00bfc4;
+            --color-primary-strong: #f8766d;
+            --color-secondary-strong: #00bfc4;
         }
 
         body.theme-light .glass-panel {
@@ -131,6 +141,32 @@
         body.theme-light .text-white {
             color: #0f172a !important;
         }
+
+        .text-brand-500 {
+            color: var(--color-primary) !important;
+        }
+
+        .text-brand-secondary {
+            color: var(--color-secondary) !important;
+            font-weight: 700;
+        }
+
+        .tag-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.35rem;
+            padding: 0.25rem 0.6rem;
+            border-radius: 9999px;
+            font-size: 0.75rem;
+            font-family: 'JetBrains Mono', monospace;
+            background: var(--color-secondary);
+            color: #ffffff;
+        }
+
+        body.theme-light .tag-badge {
+            background: var(--color-secondary-strong);
+            color: #ffffff;
+        }
     </style>
 </head>
 
@@ -164,7 +200,7 @@
     <main class="pt-24 pb-16 min-h-screen px-4">
         <div class="max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 gap-10 items-start">
             <div class="space-y-6">
-                <div class="text-sm font-mono text-brand-500">projects/anuario-movilidad</div>
+                <div class="text-sm font-mono text-brand-secondary">projects/anuario-movilidad</div>
 
                 <div data-lang="en" class="space-y-3">
                     <h1 class="text-3xl md:text-4xl font-bold text-white">Data Science & Visualization: Bogotá Road
@@ -187,21 +223,21 @@
                 </div>
 
                 <div data-lang="en" class="flex flex-wrap gap-2 text-xs font-mono text-brand-100">
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">R</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">ggplot2</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">Vision Zero</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">Traffic Safety</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">Indicators</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">Data Viz</span>
+                    <span class="tag-badge">R</span>
+                    <span class="tag-badge">ggplot2</span>
+                    <span class="tag-badge">Vision Zero</span>
+                    <span class="tag-badge">Traffic Safety</span>
+                    <span class="tag-badge">Indicators</span>
+                    <span class="tag-badge">Data Viz</span>
                 </div>
 
                 <div data-lang="es" class="flex flex-wrap gap-2 text-xs font-mono text-brand-100 hidden">
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">R</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">ggplot2</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">Vision Zero</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">Seguridad vial</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">Indicadores</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">Visualización</span>
+                    <span class="tag-badge">R</span>
+                    <span class="tag-badge">ggplot2</span>
+                    <span class="tag-badge">Vision Zero</span>
+                    <span class="tag-badge">Seguridad vial</span>
+                    <span class="tag-badge">Indicadores</span>
+                    <span class="tag-badge">Visualización</span>
                 </div>
 
                 <div class="flex flex-wrap gap-3">
