--- a/project_template.html
+++ b/project_template.html
@@ -41,156 +41,9 @@
             }
         }
     </script>
-    <style>
-        :root {
-            --bg: #0f172a;
-            --text: #f8fafc;
-            --panel: rgba(30, 41, 59, 0.95);
-            --border: rgba(255, 255, 255, 0.1);
-            --nav: rgba(15, 23, 42, 0.95);
-            /* Brand palette (dark mode) */
-            --color-primary: #00bfc4;
-            --color-secondary: #f8766d;
-            --color-primary-strong: #00bfc4;
-            --color-secondary-strong: #f8766d;
-        }
-
-        body {
-            background-color: var(--bg);
-            color: var(--text);
-        }
-
-        .glass-panel {
-            background: var(--panel);
-            backdrop-filter: blur(10px);
-            border-bottom: 1px solid var(--border);
-        }
-
-        .nav-surface {
-            background-color: var(--nav);
-            border-color: var(--border);
-            color: var(--text);
-        }
-
-        body.theme-light {
-            --bg: #ffffff;
-            --text: #0f172a;
-            --panel: rgba(255, 255, 255, 0.9);
-            --border: rgba(15, 23, 42, 0.08);
-            --nav: rgba(255, 255, 255, 0.95);
-            /* Light mode: swap order (coral then cyan) */
-            --color-primary: #f8766d;
-            --color-secondary: #00bfc4;
-            --color-primary-strong: #f8766d;
-            --color-secondary-strong: #00bfc4;
-        }
-
-        .lang-switch {
-            background: var(--panel);
-            border-color: var(--border);
-        }
-
-        .lang-btn {
-            background: var(--panel);
-            border: 1px solid var(--border);
-        }
-
-        .theme-btn {
-            color: var(--text);
-        }
-
-        body.theme-light .lang-switch {
-            background: #e2e8f0;
-            border-color: #cbd5e1;
-        }
-
-        body.theme-light .lang-btn {
-            background: #e2e8f0;
-            border-color: #cbd5e1;
-        }
-
-        body.theme-light .theme-btn {
-            color: #0f172a;
-        }
-
-        body.theme-light .text-white {
-            color: #0f172a !important;
-        }
-
-        /* Darker teal/coral accents in light mode */
-        body.theme-light .text-brand-500 {
-            color: #00949a !important;
-        }
-
-        body.theme-light .bg-brand-600 {
-            background-color: #00949a !important;
-        }
-
-        body.theme-light .border-brand-600 {
-            border-color: #00949a !important;
-        }
-
-        /* Brand text helpers */
-        .text-brand-500 {
-            color: var(--color-primary) !important;
-        }
-
-        .text-brand-secondary {
-            color: var(--color-secondary) !important;
-            font-weight: 700;
-        }
-
-        /* Tag pills */
-        .tag-badge {
-            display: inline-flex;
-            align-items: center;
-            gap: 0.35rem;
-            padding: 0.25rem 0.6rem;
-            border-radius: 9999px;
-            font-size: 0.75rem;
-            font-family: 'JetBrains Mono', monospace;
-            background: var(--color-secondary);
-            color: #ffffff;
-        }
-
-        body.theme-light .tag-badge {
-            background: var(--color-secondary-strong);
-            color: #ffffff;
-        }
-
-        /* Reusable Project Button (solid secondary) */
-        .btn-project {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            padding: 0.5rem 1rem;
-            border-radius: 9999px;
-            font-weight: 600;
-            font-size: 0.75rem;
-            line-height: 1rem;
-            transition: all 0.3s ease;
-            border: 1px solid var(--color-secondary);
-            color: #ffffff;
-            background: var(--color-secondary);
-            box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-        }
-
-        .btn-project:hover {
-            transform: translateY(-1px);
-            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-        }
-
-        .btn-project:focus-visible {
-            outline: 2px solid var(--color-secondary);
-            outline-offset: 2px;
-        }
-
-        body.theme-light .btn-project {
-            background: var(--color-secondary-strong);
-            border-color: var(--color-secondary-strong);
-            color: #ffffff;
-        }
-    </style>
+    
+    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/project-layout.css">
 </head>
 
 <body class="antialiased">
@@ -221,15 +74,15 @@
 
     <!-- Content Container -->
     <main class="pt-20 pb-12 min-h-screen px-4">
-        <div class="max-w-6xl mx-auto grid grid-cols-1 lg:grid-cols-2 gap-10 items-start">
+        <div class="project-container grid grid-cols-1 lg:grid-cols-2 gap-10 items-start">
             <div class="space-y-6">
-                <div class="text-sm font-mono text-brand-secondary">project_detail.md</div>
-                <h1 class="text-3xl md:text-4xl font-bold text-white" id="project-title">Título del Análisis</h1>
-                <p class="text-slate-300 text-lg leading-relaxed" id="project-desc">
+                <div class="project-path text-sm font-mono text-brand-secondary">project_detail.md</div>
+                <h1 class="project-title text-3xl md:text-4xl font-bold" id="project-title">Título del Análisis</h1>
+                <p class="project-desc text-lg leading-relaxed" id="project-desc">
                     Descripción corta del contexto del proyecto. Aquí explicamos brevemente qué metodologías se usaron
                     antes de mostrar el reporte completo.
                 </p>
-                <div class="flex flex-wrap gap-2" id="project-tags">
+                <div class="project-tags flex flex-wrap" id="project-tags">
                     <span class="tag-badge">R Stats</span>
                     <span class="tag-badge">Shiny</span>
                 </div>
